# OVRLEY

./: .gitignore  .releaserc.json  LICENSE.md  README.md  backend_migration_assessment.md  bug_fixes.md  bugs-to-be-fixed.md  cache_building_fix.md  front-backend-workflow.md  frontend-refactor.md  frontend_implementation_plan.md  gpu-render.md  icons_units_plan.md  instructions.md  mp4-compositing.md  mp4-plan.md  mp4-preview.md  mp4-prompts.md  option-1-local-http-range-video-plan-preserved-expanded.md  option-1-local-http-range-video-plan-revised.md  package-lock.json  package.json  phase-5-DS-compositing-implementation-plan.md  phase-5-GPT-compositing-implementation-plan.md  pnpm-lock.yaml  rust_skia_plan.md  rust_skia_plan_final.md  rust_vello_plan.md  serial-render-refactor.md  skills-lock.json  strategy.md  todo-v2.md  todo.md  todo_fixes.md
.agents/: agents.md  (+29 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/cyclemetry_core/: Cargo.toml
src-tauri/cyclemetry_core/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/ovrley_core/: BASELINES.md  BENCHMARKS.md  Cargo.toml  README.md  build.rs  test_output.txt
src-tauri/src/: BENCHMARKS.md  benchmark_common.rs  bin_common.rs  file_ops.rs  lib.rs  main.rs  preview_import.rs  runtime_paths.rs  tauri_commands.rs  video_server.rs  video_server_tests.rs
src-tauri/target-codex-font-fix/: .rustc_info.json
src-tauri/tests/: video_server_tests.rs
src-tauri/wasm_preview_poc/: Cargo.toml  README.md  report.md
(+1147 files in other folders)
