[workspace]
members = [
    ".",
    "ovrley_core",
]

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "GPL-3.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
base64 = "0.22"
ovrley_core = { path = "ovrley_core" }
tiny_http = "0.12"
uuid = { version = "1", features = ["v4"] }
