[package]
# Standalone Rust core for OVRLEY's Tauri backend. The crate contains activity
# preparation, Skia overlay rendering, ffmpeg encoding, and backend command
# helpers so those behaviors can be tested independently from the UI shell.
name = "ovrley_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
skia-safe = { version = "0.75", features = ["binary-cache"] }

[dev-dependencies]
anyhow = "1.0"
